# Invictos

./: .gitignore  README.md  index.html  invictos.db  invictos.py  load_env.ps1  pyproject.toml  temp_api_test.py  temp_check.py
.cache/: auth.json
.cache/ed04edab-4ffa-4305-9703-e0a2029f682d/: bets_cache.json
backend/: __main__.py  auth.py  crud.py  db.py  main.py  models.py  security.py  seed.py  settings.py
client/: __main__.py  api.py  app.py  cache.py  config.py  i18n.py  models.py  state.py  sync.py
client/ui/: components.py  theme.py
client/utils/: formatting.py
docs/: ARQUITECTURA.md  sesiones.md
invictos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
