[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invictos"
version = "0.1.0"
description = "Invictos bet tracker desktop app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "flet>=0.11.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25",
]

[project.scripts]
invictos = "invictos:main"


[tool.setuptools]
py-modules = ["invictos"]

[tool.setuptools.packages.find]
include = ["backend", "backend.*", "client", "client.*"]


